--- a/main/addequipment/localisation/addequipment_l_english.yml
+++ b/main/addequipment/localisation/addequipment_l_english.yml
@@ -2,11 +2,17 @@
 
   AddEquipmentTools_idea:0 "添加装备小工具"
   addeq_infantry_ideas:0 "添加步兵装备"
+  addeq_artillery_ideas:0 "添加炮兵装备"
 
   addeq_infantry_0:0 "添加基础步兵装备"
   addeq_infantry_1:0 "添加一级步兵装备"
   addeq_infantry_2:0 "添加二级步兵装备"
   addeq_infantry_3:0 "添加三级步兵装备"
+
+
+  addeq_artillery_1:0 "添加一级火炮"
+  addeq_artillery_2:0 "添加二级火炮"
+  addeq_artillery_3:0 "添加三级火炮"
 
   #addeq_supp:0 "添加补给"
 
@@ -23,17 +29,32 @@
  addeq.event.infantry.amount.c:0 "10000"
  
 
- addeq.event.infantry.80000.t:0 "添加基础步兵装备"
- addeq.event.infantry.80000.d:0 "添加基础步兵装备\n请选择数量"
+ addeq.event.infantry.80100.t:0 "添加基础步兵装备"
+ addeq.event.infantry.80100.d:0 "添加基础步兵装备\n请选择数量"
 
- addeq.event.infantry.80100.t:0 "添加一级步兵装备"
- addeq.event.infantry.80100.d:0 "添加一级步兵装备\n请选择数量"
+ addeq.event.infantry.80101.t:0 "添加一级步兵装备"
+ addeq.event.infantry.80101.d:0 "添加一级步兵装备\n请选择数量"
 
- addeq.event.infantry.80200.t:0 "添加二级步兵装备"
- addeq.event.infantry.80200.d:0 "添加二级步兵装备\n请选择数量"
+ addeq.event.infantry.80102.t:0 "添加二级步兵装备"
+ addeq.event.infantry.80102.d:0 "添加二级步兵装备\n请选择数量"
 
- addeq.event.infantry.80300.t:0 "添加三级步兵装备"
- addeq.event.infantry.80300.d:0 "添加三级步兵装备\n请选择数量"
+ addeq.event.infantry.80103.t:0 "添加三级步兵装备"
+ addeq.event.infantry.80103.d:0 "添加三级步兵装备\n请选择数量"
+
+ #炮兵装备
+ addeq.event.artillery.amount.a:0 "500"
+ addeq.event.artillery.amount.b:0 "1000"
+ addeq.event.artillery.amount.c:0 "3000"
+ 
+
+ addeq.event.artillery.80211.t:0 "添加一级火炮"
+ addeq.event.artillery.80211.d:0 "添加一级火炮\n请选择数量"
+
+ addeq.event.artillery.80212.t:0 "添加二级火炮"
+ addeq.event.artillery.80212.d:0 "添加二级火炮\n请选择数量"
+
+ addeq.event.artillery.80213.t:0 "添加三级火炮"
+ addeq.event.artillery.80213.d:0 "添加三级火炮\n请选择数量"
 
 
 
