--- a/main/addequipment/localisation/addequipment_l_english.yml
+++ b/main/addequipment/localisation/addequipment_l_english.yml
@@ -2,30 +2,51 @@
   
   #####################标题#####################
   #
-  AddEquipmentTools_idea:0 "添加装备小工具"
+  AddEquipmentTools_Idea:0 "添加步兵炮兵装备"
+  AddEquipmentTools_Tank_Idea:0 "添加坦克"
+
+  #Idea组标题
+  #步兵炮兵装备
   addeq_infantry_ideas:0 "添加步兵装备"
   addeq_artillery_ideas:0 "添加炮兵装备"
-  addeq_anti_ideas:0 "添加防空及反坦装备"
-  #addeq_support_ideas:0 "添加支援装备"
-  #addeq_motoeq_ideas:0 "添加摩托化装备"
+  addeq_anti_ideas:0 "添加牵引式防空及反坦装备"
   addeq_navy_ideas:0 "添加海军装备"
 
+  #坦克
+  #轻型坦克
+  addeq_tank_light_ideas:0 "添加轻型坦克"
+
+  addeq_tank_medium_ideas:0 "添加中型坦克"
+
+  #重型坦克
+  addeq_tank_heavy_ideas:0 "添加重型坦克"
+  
+  #现代坦克
+  addeq_tank_modern_ideas:0 "添加现代坦克"
+
+  #超重坦克
+  addeq_tank_superheavy_ideas:0 "添加超重型坦克"
+
+
+  #####################各子idea标题#####################
+  
+  #=================枪/牵引式火炮/运输船=================#
 
   #步兵装备(枪)
  
   addeq_infantry_0:0 "添加基础步兵装备"
-  addeq_infantry_1:0 "添加一级步兵装备"
-  addeq_infantry_2:0 "添加二级步兵装备"
-  addeq_infantry_3:0 "添加三级步兵装备"
+  addeq_infantry_1:0 "添加I级步兵装备"
+  addeq_infantry_2:0 "添加II级步兵装备"
+  addeq_infantry_3:0 "添加III级步兵装备"
  
   #火炮及火箭炮
 
-  addeq_artillery_1:0 "添加一级火炮"
-  addeq_artillery_2:0 "添加二级火炮"
-  addeq_artillery_3:0 "添加三级火炮"
+  addeq_artillery_1:0 "添加I级火炮"
+  addeq_artillery_2:0 "添加II级火炮"
+  addeq_artillery_3:0 "添加III级火炮"
 
-  addeq_artillery_rocket_1:0 "添加一级火箭炮"
-  addeq_artillery_rocket_2:0 "添加二级火箭炮"
+  addeq_artillery_rocket_1:0 "添加I级火箭炮"
+  addeq_artillery_rocket_2:0 "添加II级火箭炮"
 
   addeq_artillery_motorized_rocket_1:0 "添加自行火箭炮"
 
@@ -36,25 +57,52 @@
   addeq_motoeq_1:0 "添加摩托化装备"
 
   #防空及反坦
-  addeq_anti_air_1:0 "添加一级防空炮"
-  addeq_anti_air_2:0 "添加二级防空炮"
-  addeq_anti_air_3:0 "添加三级防空炮"
+  addeq_anti_air_1:0 "添加I级牵引式防空炮"
+  addeq_anti_air_2:0 "添加II级牵引式防空炮"
+  addeq_anti_air_3:0 "添加III级牵引式防空炮"
   
-  addeq_anti_tank_1:0 "添加一级反坦克炮"
-  addeq_anti_tank_2:0 "添加二级反坦克炮"
-  addeq_anti_tank_3:0 "添加三级反坦克炮"
+  addeq_anti_tank_1:0 "添加I级牵引式反坦克炮"
+  addeq_anti_tank_2:0 "添加II级牵引式反坦克炮"
+  addeq_anti_tank_3:0 "添加III级牵引式反坦克炮"
 
   #addeq_supp:0 "添加补给"
 
   #运输船
   addeq_convoy_1:0 "添加运输船"
+  
+  #===================坦克===================#
+  
+  
+  #---------------轻型坦克---------------#
+  addeq_tank_gw:0 "添加一战坦克"
+  addeq_tank_light:0 "添加轻型坦克"
 
+
+  #---------------中型坦克---------------#
   
 
- #####################事件#####################
- #
+
+  #---------------重型坦克---------------#
+  
+  
+  #---------------超重坦克---------------#
+  #
+
+  #---------------现代坦克---------------#
+  
+
+  
+  #===================飞机===================#
+
+
+
+ ######################事件######################
+
+ #事件通用按钮文本
  addeq.event.common.a:0 "确定"
  addeq.event.common.b:0 "关闭"
+ addeq.event.common.c:0 "上一页"
+ addeq.event.common.d:0 "下一页"
 
  #步兵装备
  #步兵装备数量
@@ -66,14 +114,14 @@
  addeq.event.infantry.80100.t:0 "添加基础步兵装备"
  addeq.event.infantry.80100.d:0 "添加基础步兵装备\n请选择数量"
 
- addeq.event.infantry.80101.t:0 "添加一级步兵装备"
- addeq.event.infantry.80101.d:0 "添加一级步兵装备\n请选择数量"
+ addeq.event.infantry.80101.t:0 "添加I级步兵装备"
+ addeq.event.infantry.80101.d:0 "添加I级步兵装备\n请选择数量"
 
- addeq.event.infantry.80102.t:0 "添加二级步兵装备"
- addeq.event.infantry.80102.d:0 "添加二级步兵装备\n请选择数量"
+ addeq.event.infantry.80102.t:0 "添加II级步兵装备"
+ addeq.event.infantry.80102.d:0 "添加II级步兵装备\n请选择数量"
 
- addeq.event.infantry.80103.t:0 "添加三级步兵装备"
- addeq.event.infantry.80103.d:0 "添加三级步兵装备\n请选择数量"
+ addeq.event.infantry.80103.t:0 "添加III级步兵装备"
+ addeq.event.infantry.80103.d:0 "添加III级步兵装备\n请选择数量"
 
 
  #支援装备
@@ -98,20 +146,20 @@
  addeq.event.artillery.amount.c:0 "3000"
  
 
- addeq.event.artillery.80211.t:0 "添加一级火炮"
- addeq.event.artillery.80211.d:0 "添加一级火炮\n请选择数量"
+ addeq.event.artillery.80211.t:0 "添加I级火炮"
+ addeq.event.artillery.80211.d:0 "添加I级火炮\n请选择数量"
 
- addeq.event.artillery.80212.t:0 "添加二级火炮"
- addeq.event.artillery.80212.d:0 "添加二级火炮\n请选择数量"
+ addeq.event.artillery.80212.t:0 "添加II级火炮"
+ addeq.event.artillery.80212.d:0 "添加II级火炮\n请选择数量"
 
- addeq.event.artillery.80213.t:0 "添加三级火炮"
- addeq.event.artillery.80213.d:0 "添加三级火炮\n请选择数量"
+ addeq.event.artillery.80213.t:0 "添加III级火炮"
+ addeq.event.artillery.80213.d:0 "添加III级火炮\n请选择数量"
 
- addeq.event.artillery.80221.t:0 "添加一级火箭炮"
- addeq.event.artillery.80221.d:0 "添加一级火箭炮\n请选择数量"
+ addeq.event.artillery.80221.t:0 "添加I级火箭炮"
+ addeq.event.artillery.80221.d:0 "添加I级火箭炮\n请选择数量"
 
- addeq.event.artillery.80222.t:0 "添加二级火箭炮"
- addeq.event.artillery.80222.d:0 "添加二级火箭炮\n请选择数量"
+ addeq.event.artillery.80222.t:0 "添加II级火箭炮"
+ addeq.event.artillery.80222.d:0 "添加II级火箭炮\n请选择数量"
 
  addeq.event.artillery.80231.t:0 "添加自行火箭炮"
  addeq.event.artillery.80231.d:0 "添加自行火箭炮\n请选择数量"
@@ -121,23 +169,23 @@
  addeq.event.anti.amount.b:0 "800"
  addeq.event.anti.amount.c:0 "2000"
 
- addeq.event.anti.80311.t:0 "添加一级防空炮"
- addeq.event.anti.80311.d:0 "添加一级防空炮\n请选择数量"
+ addeq.event.anti.80311.t:0 "添加I级牵引式防空炮"
+ addeq.event.anti.80311.d:0 "添加I级牵引式防空炮\n请选择数量"
 
- addeq.event.anti.80312.t:0 "添加二级防空炮"
- addeq.event.anti.80312.d:0 "添加二级防空炮\n请选择数量"
+ addeq.event.anti.80312.t:0 "添加II级牵引式防空炮"
+ addeq.event.anti.80312.d:0 "添加II级牵引式防空炮\n请选择数量"
 
- addeq.event.anti.80313.t:0 "添加三级防空炮"
- addeq.event.anti.80313.d:0 "添加三级防空炮\n请选择数量"
+ addeq.event.anti.80313.t:0 "添加III级牵引式防空炮"
+ addeq.event.anti.80313.d:0 "添加III级牵引式防空炮\n请选择数量"
  
- addeq.event.anti.80321.t:0 "添加一级反坦克炮"
- addeq.event.anti.80321.d:0 "添加一级反坦克炮\n请选择数量"
+ addeq.event.anti.80321.t:0 "添加I级牵引式反坦克炮"
+ addeq.event.anti.80321.d:0 "添加I级牵引式反坦克炮\n请选择数量"
 
- addeq.event.anti.80322.t:0 "添加二级反坦克炮"
- addeq.event.anti.80322.d:0 "添加二级反坦克炮\n请选择数量"
+ addeq.event.anti.80322.t:0 "添加II级牵引式反坦克炮"
+ addeq.event.anti.80322.d:0 "添加II级牵引式反坦克炮\n请选择数量"
 
- addeq.event.anti.80323.t:0 "添加三级反坦克炮"
- addeq.event.anti.80323.d:0 "添加三级反坦克炮\n请选择数量"
+ addeq.event.anti.80323.t:0 "添加III级牵引式反坦克炮"
+ addeq.event.anti.80323.d:0 "添加III级牵引式反坦克炮\n请选择数量"
  
  #####################################################
 
@@ -152,6 +200,51 @@
  addeq.event.navy.85101.t:0 "添加运输船"
  addeq.event.navy.85101.d:0 "添加运输船\n请选择数量"
 
+
+ #===================坦克===================#
+  
+  
+  #---------------轻型坦克---------------#
+  addeq.event.tank.light.amount.a:0 "600"
+  addeq.event.tank.light.amount.b:0 "1200"
+  addeq.event.tank.light.amount.c:0 "2500"
+  
+  addeq.event.tank.light.a:0 "添加轻型I型坦克"
+  addeq.event.tank.light.b:0 "添加轻型II型坦克"
+  addeq.event.tank.light.c:0 "添加轻型III型坦克"
+ 
+  addeq.event.tank.light.86100.t:0 "添加一战坦克"
+  addeq.event.tank.light.86100.d:0 "添加一战坦克\n请选择数量"
+
+  addeq.event.tank.light.86106.t:0 "添加轻型坦克"
+  addeq.event.tank.light.86106.d:0 "添加轻型坦克\n请选择类型"
+
+  addeq.event.tank.light.86101.t:0 "添加轻型I型坦克"
+  addeq.event.tank.light.86101.d:0 "添加轻型I型坦克\n请选择数量"
+
+  addeq.event.tank.light.86102.t:0 "添加轻型II型坦克"
+  addeq.event.tank.light.86102.d:0 "添加轻型II型坦克\n请选择数量"
+
+  addeq.event.tank.light.86103.t:0 "添加轻型III型坦克"
+  addeq.event.tank.light.86103.d:0 "添加轻型III型坦克\n请选择数量"
+
+
+
+  #---------------中型坦克---------------#
+  
+
+
+  #---------------重型坦克---------------#
+  
+  
+  #---------------超重坦克---------------#
+  #
+
+  #---------------现代坦克---------------#
+  
+
+  
+  #===================飞机===================# 
 
 
  
