--- a/main/addequipment/localisation/addequipment_l_english.yml
+++ b/main/addequipment/localisation/addequipment_l_english.yml
@@ -83,6 +83,10 @@
 
 
   #---------------中型坦克---------------#
+  addeq_tank_medium:0 "添加中型坦克"
+  addeq_tank_medium_artillery:0 "添加中型自行火炮"
+  addeq_tank_medium_destroyer:0 "添加中型自行反坦克炮"
+  addeq_tank_medium_aa:0 "添加中型自行防空炮"
   
 
 
@@ -285,7 +289,80 @@
   addeq.event.tank.light.86133.d:0 "添加轻型自行防空炮III型\n请选择数量"
 
   #---------------中型坦克---------------#
+
+  addeq.event.tank.medium.amount.a:0 "500"
+  addeq.event.tank.medium.amount.b:0 "1000"
+  addeq.event.tank.medium.amount.c:0 "2000"
+
+  addeq.event.tank.medium.86206.t:0 "添加中型坦克"
+  addeq.event.tank.medium.86206.d:0 "添加中型坦克\n请选择类型"
+
+  addeq.event.tank.medium.86206.a:0 "添加中型坦克I型"
+  addeq.event.tank.medium.86206.b:0 "添加中型坦克II型"
+  addeq.event.tank.medium.86206.c:0 "添加中型坦克III型"
   
+  addeq.event.tank.medium.86201.t:0 "添加中型坦克I型"
+  addeq.event.tank.medium.86201.d:0 "添加中型坦克I型\n请选择数量"
+
+  addeq.event.tank.medium.86202.t:0 "添加中型坦克II型"
+  addeq.event.tank.medium.86202.d:0 "添加中型坦克II型\n请选择数量"
+
+  addeq.event.tank.medium.86203.t:0 "添加中型坦克III型"
+  addeq.event.tank.medium.86203.d:0 "添加中型坦克III型\n请选择数量"
+
+
+  #中型自行火炮
+  addeq.event.tank.medium.86216.a:0 "添加中型自行火炮I型"
+  addeq.event.tank.medium.86216.b:0 "添加中型自行火炮II型"
+  addeq.event.tank.medium.86216.c:0 "添加中型自行火炮III型"
+
+  addeq.event.tank.medium.86216.t:0 "添加中型自行火炮"
+  addeq.event.tank.medium.86216.d:0 "添加中型自行火炮\n请选择类型"
+
+  addeq.event.tank.medium.86211.t:0 "添加中型自行火炮I型"
+  addeq.event.tank.medium.86211.d:0 "添加中型自行火炮I型\n请选择数量"
+  
+  addeq.event.tank.medium.86212.t:0 "添加中型自行火炮II型"
+  addeq.event.tank.medium.86212.d:0 "添加中型自行火炮II型\n请选择数量"
+  
+  addeq.event.tank.medium.86213.t:0 "添加中型自行火炮III型"
+  addeq.event.tank.medium.86213.d:0 "添加中型自行火炮III型\n请选择数量"
+
+  #中型自行反坦克火炮
+
+  addeq.event.tank.medium.86226.a:0 "添加中型自行反坦克炮I型"
+  addeq.event.tank.medium.86226.b:0 "添加中型自行反坦克炮II型"
+  addeq.event.tank.medium.86226.c:0 "添加中型自行反坦克炮III型"
+
+  addeq.event.tank.medium.86226.t:0 "添加自行反坦克炮"
+  addeq.event.tank.medium.86226.d:0 "添加自行反坦克炮\n请选择类型"
+
+  addeq.event.tank.medium.86221.t:0 "添加自行反坦克炮I型"
+  addeq.event.tank.medium.86221.d:0 "添加自行反坦克炮I型\n请选择数量"
+
+  addeq.event.tank.medium.86222.t:0 "添加自行反坦克炮II型"
+  addeq.event.tank.medium.86222.d:0 "添加自行反坦克炮II型\n请选择数量"
+
+  addeq.event.tank.medium.86223.t:0 "添加自行反坦克炮III型"
+  addeq.event.tank.medium.86223.d:0 "添加自行反坦克炮III型\n请选择数量"
+
+  #中型自行防空炮
+
+  addeq.event.tank.medium.86236.a:0 "添加中型自行防空炮I型"
+  addeq.event.tank.medium.86236.b:0 "添加中型自行防空炮II型"
+  addeq.event.tank.medium.86236.c:0 "添加中型自行防空炮III型"
+
+  addeq.event.tank.medium.86236.t:0 "添加中型自行防空炮"
+  addeq.event.tank.medium.86236.d:0 "添加中型自行防空炮\n请选择类型"
+  
+  addeq.event.tank.medium.86231.t:0 "添加中型自行防空炮I型"
+  addeq.event.tank.medium.86231.d:0 "添加中型自行防空炮I型\n请选择数量"
+
+  addeq.event.tank.medium.86232.t:0 "添加中型自行防空炮II型"
+  addeq.event.tank.medium.86232.d:0 "添加中型自行防空炮II型\n请选择数量"
+
+  addeq.event.tank.medium.86233.t:0 "添加中型自行防空炮III型"
+  addeq.event.tank.medium.86233.d:0 "添加中型自行防空炮III型\n请选择数量"
 
 
   #---------------重型坦克---------------#
