添加超重坦克、自行火炮及防空火炮功能

--- a/main/addequipment/localisation/addequipment_l_english.yml
+++ b/main/addequipment/localisation/addequipment_l_english.yml
@@ -112,7 +112,9 @@
   
   #---------------超重坦克---------------#
   addeq_tank_superheavy:0 "添加超重坦克"
-
+  addeq_tank_superheavy_artillery:0 "添加超重自行火炮"
+  addeq_tank_superheavy_destroyer:0 "添加超重自行反坦克炮"
+  addeq_tank_superheavy_aa:0 "添加超重自行防空炮"
 
 
   #---------------现代坦克---------------#
@@ -121,7 +123,6 @@
   addeq_tank_modern_destroyer:0 "添加现代自行反坦克炮"
   addeq_tank_modern_aa:0 "添加现代自行防空炮"
   
-
   
   #===================飞机===================#
 
@@ -524,14 +525,16 @@
   addeq.event.tank.superheavy.86506.d:0 "添加超重坦克"
 
   #超重自行火炮
-  
-  
+  addeq.event.tank.superheavy.86516.t:0 "添加超重自行火炮"
+  addeq.event.tank.superheavy.86516.d:0 "添加超重自行火炮"
 
   #超重自行反坦克炮
-
+  addeq.event.tank.superheavy.86526.t:0 "添加超重自行反坦克炮"
+  addeq.event.tank.superheavy.86526.d:0 "添加超重自行反坦克炮"
   
   #超重自行防空炮
-
+  addeq.event.tank.superheavy.86536.t:0 "添加超重自行防空炮"
+  addeq.event.tank.superheavy.86536.d:0 "添加超重自行防空炮"
 
 
   #-----------------现代坦克-----------------#
@@ -543,16 +546,13 @@
   addeq.event.tank.modern.86406.t:0 "添加现代坦克"
   addeq.event.tank.modern.86406.d:0 "添加现代坦克"
 
-  
   #现代自行火炮
   addeq.event.tank.modern.86416.t:0 "添加现代自行火炮"
   addeq.event.tank.modern.86416.d:0 "添加现代自行火炮"
 
-
   # 现代自行反坦克炮
   addeq.event.tank.modern.86426.t:0 "添加现代自行反坦克炮"
   addeq.event.tank.modern.86426.d:0 "添加现代自行反坦克炮"
-
 
   #现代自行防空炮
   addeq.event.tank.modern.86436.t:0 "添加现代自行防空炮"
